src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Imprint__c</fullName>
        <description>Indicates Imprint for GHEPM ex. Benjamin Cummings</description>
        <label>Imprint</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Cummings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK - Jamsa Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK - Philip Allan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha (formerly PI Press)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson Education Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson Education New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Point.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBC (BBC Active)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prentice Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson Education ESL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peachpit Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addison-Wesley Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK - George Godwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK - Wait Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BradyGames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDH Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson Prentice Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson Education India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hrd Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipg / Zephyr Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Bennett Aust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hp Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Promo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Base_Required__c</fullName>
        <description>CORE - Indicates if a reference to the license item/product is required when ordering this product</description>
        <label>Install Base Required</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Base_Tracked__c</fullName>
        <description>CORE - When a product is assigned a Y value within this field then it implies that  any transaction against this item will be tracked as an instance within Oracle Installed Base for a Customer when Ordered</description>
        <label>Install Base Tracked</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstockDate__c</fullName>
        <description>Created For NA Product Configuration RD-00419</description>
        <formula>IF(OR(ISPICKVAL(Status__c, &apos;BO&apos;),(ISPICKVAL(Status__c,&apos;TU&apos;))),Due_Instock_Date__c ,Publish_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstockDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Higher Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Indicates which Market is utilizing this product.</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medium2__c</fullName>
        <description>CORE - Medium of book delivery. Used for US HE</description>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Accumulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital,Y,Y,Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital,Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital,Y,Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital,Y,Y,Y,Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>CORE - Medium of book delivery</description>
        <label>Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Code__c</fullName>
        <description>Populated on a Module for South Africa to indicate the code associated to the Module.</description>
        <label>Module Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <description>Type of Course: Core/Elective</description>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Edition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Edition</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Next Edition)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLP_URL__c</fullName>
        <label>OLP URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>CORE</description>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Contains_Access_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Contains Access Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <label>Page Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pearson_Custom_Library__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pearson Custom Library</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Requisite__c</fullName>
        <label>Pre-Requisite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Edition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Edition</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Previous Edition)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>CORE</description>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials - Software Bundles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Author__c</fullName>
        <description>Cretaed To Refer Author Field.</description>
        <formula>Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product_Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Series__c</fullName>
        <label>Product Series</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>CORE - Original publish date of book</description>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Code__c</fullName>
        <description>Populated on Bundle Product to indicate the Qualification Code for a Module.</description>
        <label>Qualification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Level_Code__c</fullName>
        <description>Populated on a Bundle Product to indicate a Qualification Level Code for a Module.</description>
        <label>Qualification Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Level_Name__c</fullName>
        <description>Populated on a Bundle Product for South Africa to indicate the Level Number for a Module.</description>
        <label>Qualification Level Name</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification_Name__c</fullName>
        <description>Populated on a Bundle Product to house the Qualification Name for that Bundle</description>
        <label>Qualification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_in_Stock__c</fullName>
        <description>CORE - Quantity of book in stock</description>
        <label>Quantity in Stock</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relevance_Value_String__c</fullName>
        <description>Convert relevance value from from mobile to text.  Used by Mobile application.</description>
        <formula>TEXT(Relevance_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relevance_Value_String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevance_Value__c</fullName>
        <label>Relevance (Value)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relevance__c</fullName>
        <description>•If Today is between Nov. 1st &amp; April 30th and the Products assigned a Relevance of &quot;Current Period&quot; (10) /then indicate that the Product has Spring Frontlist products. 

•If Today is between Nov. 1st &amp; April 30th and Product Family has assigned a Relevance of &quot;Prior Period&quot; (30) then indicate that the Product has Fall Frontlist icon. 

•If Today is between May 1st &amp; Oct. 31st and the Product Family is assigned a Relevance of &quot;Current Period&quot; (10) then indicate that the Product has Fall Frontlist icon. 

If Today is between May 1st &amp; Oct. 31st and the Product Family is assigned a Relevance of &quot;Prior Period&quot; (30) then indicate that the Product has Spring Frontlist icon.</description>
        <formula>IF(AND(OR(AND(MONTH( TODAY() ) &gt;= 11, MONTH( TODAY() ) &lt;= 12),AND(MONTH( TODAY() ) &gt;= 1, MONTH( TODAY() ) &lt;= 4)),Relevance_Value__c == 10),IMAGE(&quot;/resource/icon_frontlist_spring&quot;,&quot;Spring Icon&quot;),
   If(AND(OR(AND(MONTH( TODAY() ) &gt;= 11, MONTH( TODAY() ) &lt;= 12),AND(MONTH( TODAY() ) &gt;= 1, MONTH( TODAY() ) &lt;= 4)),Relevance_Value__c == 30),IMAGE(&quot;/resource/icon_frontlist_fall&quot;,&quot;Fall Icon&quot;),
       IF(AND(MONTH( TODAY() ) &gt;= 5, MONTH( TODAY() ) &lt;= 10,Relevance_Value__c == 10),IMAGE(&quot;/resource/icon_frontlist_fall&quot;,&quot;Fall Icon&quot;),
	   IF(AND(MONTH( TODAY() ) &gt;= 5, MONTH( TODAY() ) &lt;= 10,Relevance_Value__c == 30),IMAGE(&quot;/resource/icon_frontlist_spring&quot;,&quot;Spring Icon&quot;),&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relevance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Order_Substitute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Order Substitute</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Revenue Order Substitute)</relationshipLabel>
        <relationshipName>Products4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBN__c</fullName>
        <description>CORE - Integration fields</description>
        <externalId>true</externalId>
        <label>ISBN10</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sampling_Restriction__c</fullName>
        <label>Sampling Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <picklist>
            <picklistValues>
                <fullName>First Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Semester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Item_Type_Code__c</fullName>
        <description>CORE - Means that a service contract in Oracle Service contracts module can be created for this item either manually or when the item/product is shipped to the customer</description>
        <label>Service Item Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_s__c</fullName>
        <description>All the regions a product is available in separated by a comma</description>
        <label>Sponsor(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>AOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TU</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>CORE - Book sub category</description>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_brand__c</fullName>
        <label>Sub-brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierId__c</fullName>
        <description>CORE - ERP reference</description>
        <inlineHelpText>ERP reference</inlineHelpText>
        <label>ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Item_Code__c</fullName>
        <description>CORE - Product supplier item code from GHEPM / Bookmaster</description>
        <label>Supplier Item Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestSOSLSerach1__c</fullName>
        <label>TestSOSLSerach1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestSOSLSerach__c</fullName>
        <defaultValue>&quot;Prod2SOSL&quot;</defaultValue>
        <description>This Field Should Be deleted , not to be used on PAgeLAyout</description>
        <externalId>true</externalId>
        <inlineHelpText>This Field Should Be deleted , not to be used on PAgeLAyout</inlineHelpText>
        <label>TestSOSLSerach</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim_Size__c</fullName>
        <label>Trim Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>CORE</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ValidForMobile__c</fullName>
        <description>Used by the HE mobile application to determine which products should be synced to the mobile application.  This field is populated by the datahub.</description>
        <label>ValidForMobile</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>D2L_Record_Type</fullName>
        <active>true</active>
        <description>Used by D2L business in SA for Product Page Layout</description>
        <label>D2L Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>HE_Record_Type</fullName>
        <active>true</active>
        <description>Used by HE to enable Page Layout Visibility for Products</description>
        <label>HE Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>Core: Captures information about Pearson Products</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>Core - used to record and track Services</description>
        <label>Service</label>
    </recordTypes>
</CustomObject>